# Boardtask

./: .env.example  .gitignore  Caddyfile  Cargo.toml  Makefile  README.md  askama.toml
.cursor/commands/: git-commit.md  plan.md
.cursor/rules/: adding-features.mdc  api-routing-structure.mdc  auth-architecture.mdc  css-formatting.mdc  handler-result-style.mdc  migrations-no-data-loss.mdc  no-raw-sql.mdc  no-shared-service.mdc  seeds.mdc  templates.mdc  tenant-isolation.mdc  testing-and-verification.mdc  validation-first.mdc  vertical-slices.mdc
.github/workflows/: test.yml
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: auth.ts
e2e/tests/: auth.setup.ts  auth.spec.ts  first_node_zoom.spec.ts  project_settings.spec.ts  smoke.spec.ts
migrations/: 20260207000000_initial.sql  20260212000000_add_auth_tables.sql  20260214000000_add_email_verification.sql  20260214100000_add_password_reset_tokens.sql  20260214110000_add_projects.sql  20260214120000_add_node_types.sql  20260214150000_add_nodes_and_edges.sql  20260216000000_add_organizations.sql  20260216000001_add_org_to_sessions.sql  20260218000000_add_estimated_minutes_to_nodes.sql  20260218100000_add_task_statuses.sql  20260218100001_add_status_to_nodes.sql  20260218100002_add_project_slots.sql  20260218100003_add_slot_id_to_nodes.sql  20260219000000_add_integrations.sql  20260221000000_schema.sql  20260222100000_add_parent_id_to_nodes.sql  20260227100000_organization_invites.sql  20260227110000_teams_and_project_team.sql  20260227120000_add_user_first_last_name.sql  20260227130000_backfill_user_names.sql  20260227140000_add_node_assigned_user_id.sql  20260227150000_add_user_profile_image_url.sql  20260227160000_add_project_slot_assigned_user_id.sql  20260228000000_require_user_first_last_name.sql  20260314000000_add_user_bio_and_preferences.sql  20260314100000_add_project_default_view_mode.sql
public/css/: app.css
public/js/: app.js  app.mjs
src/: base.html  lib.rs  main.rs
src/app/: app_layout.html  auth_layout.html  config.rs  error.rs  mod.rs  single_writer.rs  tenant.rs
src/seeds/: dev_admin_user.rs  dev_project.rs  dev_teams.rs  integrations.rs  mod.rs  system_node_types.rs
src/site/: home.html  home.rs
tests/: auth.rs  graph_api.rs  import_export.rs  invites.rs  projects.rs  teams.rs
tests/common/: mod.rs
(+104 files in other folders)
