[package]
name = "boardtask"
version = "0.1.0"
edition = "2021"
default-run = "boardtask"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }

# HTML templating
askama = "0.12"
askama_axum = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Authentication
axum-extra = { version = "0.9", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
regex = "1"
argon2 = "0.5"
ulid = { version = "1.1", features = ["serde"] }
time = "0.3"
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }

# Email
async-trait = "0.1"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-native-tls", "builder", "smtp-transport"] }
thiserror = "1.0"

# Token generation
hex = "0.4"
urlencoding = "2"
strum = "0.26"
strum_macros = "0.26"
fd-lock = "4"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
http = "1"
urlencoding = "2"
time = "0.3"
